tests/ui/transparent/enum_variant_multiple_fields.rs
// SPDX-FileCopyrightText: 2025 RAprogramm <andrey.rozanov.vl@gmail.com>
//
// SPDX-License-Identifier: MIT

use masterror::Error;

#[derive(Debug, Error)]
enum TransparentEnumFail {
    #[error(transparent)]
    Variant(String, String)
}
